# Pytest_Poetry_Experiment

./: README  README.md
examples/mono_repo_structure/: README.md
examples/mono_repo_structure/src/service1/: pyproject.toml
examples/mono_repo_structure/tests/: test_app.py
examples/regular_repo_structure/: README.md  pyproject.toml
examples/regular_repo_structure/src/mypkg/: app.py
examples/regular_repo_structure/tests/: test_app.py
